# boids_ros

./: CMakeLists.txt  README.md  package.xml
bagfiles/: led_1.1-1.bag  move_leader_0.5.bag
cfg/: Reynolds.cfg  create_robot_positions.py  initial_vel_cfg.py  sphero_init_vel.cfg
data/: data.txt  statistical_test.txt  statistical_test3.txt  statistical_test_results.txt  visualize_data.py
launch/: reynolds_launch.sh
launch/sim/: reynolds_sim.launch  setup_sim.launch  sphero_sim.rviz
resources/maps/: myTest.yaml  myTest2.yaml
resources/sim/: empty_10x10_13.world  empty_10x10_16 .world  empty_10x10_19.world  empty_10x10_7.world  myTest2_6.world  myTest_6.world  my_empty_10x10_20.world  my_empty_10x10_7.world  random_10x10_12.world  random_10x10_13.world
scripts/: boids.py  boids_teleop.py  data_analyzer.py  dynamic_reconfigure_node.py  leader_controller.py  nearest_search.py  reynolds_controller.py  util.py
